fix( #1347): allow tooltip record overlapping in Token Classifier (#1352)
Closes  #1347

This PR allows token classifier tooltip to overlap record container

--- a/frontend/assets/scss/base/base.scss
+++ b/frontend/assets/scss/base/base.scss
@@ -220,7 +220,6 @@ a {
     flex: 1;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
-    overflow: hidden;
     position: relative
 }
 
